<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="36dp"
    tools:context=".LoginActivity"
    android:background="#fff"
    >

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/logo"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:layout_marginTop="30dp"
        android:id="@+id/usernameLayout">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/appCompatImageView1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_user"
            android:paddingRight="5dp" />

        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatImageView1"
            android:textColor="@color/TextColor"
            app:backgroundTint="@color/TextColor"
            android:textCursorDrawable="@null">
        </EditText>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/PasswordLayout"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/LoginPassword"
            android:layout_width="208dp"
            android:layout_height="41dp"
            android:drawablePadding="5dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/TextColor"
            android:textCursorDrawable="@null"
            app:backgroundTint="@color/TextColor"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/LoginBTN"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/Login"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="Login"
        android:background="@drawable/buttonshape"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginBTN"
        android:layout_marginTop="30dp"
        >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/RegisterLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegisterLbl"
            android:paddingRight="5dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:text="@string/Register"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="@id/RegisterLbl"
            android:layout_marginTop="10dp"
            android:id="@+id/NewAccount"
            android:clickable="true"
            android:onClick="CreateNewAccount"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>